# Amethyst-Launcher

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.json  README.md  config-overrides.js  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json  tsconfig.web.tsbuildinfo  vite.config.ts
.github/workflows/: auto-format.yml  build.yml  format-merge.yml  format.yml
electron/: interface.d.ts  main.cjs  preload.cjs
proxy/: .gitignore  CMakeLists.txt  dllmain.cpp  wldp.vcxproj  xmake.lua
proxy/source/: AmethystProxy.cpp  AmethystProxy.hpp  dllmain.cpp  dllmain.h
proxy/src/: dllmain.cpp  dllmain.hpp
proxy/toolchains/: clang-msvc-xwin.lua
public/: electron.js  index.html  manifest.json
public/examples/: manifest-full.json  manifest-minimum.json
public/icons/: icon.icns
public/templates/: manifest.json  profiles.json  versions.json
scripts/: register-protocol-dev.sh  sync-proxy-dll.mjs
src/: App.tsx  index.css  index.tsx  main.tsx
src/Launcher/: Modlist.ts
src/VersionSwitcher/: Extractor.ts  VersionManager.ts
src/components/: ButtonSection.tsx  DividedSection.tsx  DropWindow.tsx  Dropdown.tsx  FolderInput.tsx  LoadingWheel.tsx  MainPanel.tsx  MinecraftButton.tsx  MinecraftRadialButton.tsx  MinecraftRadialButtonPanel.tsx  MinecraftToggle.tsx  ModSection.tsx  ReadOnlyTextBox.tsx  TextInput.tsx  Title.tsx  ToggleSection.tsx
src/contexts/: AppState.tsx
(+283 files in other folders)
